# Namekcraft

./: .gitignore  Info.txt  README.md  ToDo
2DGame/01-TBE/: CMakeLists.txt
2DGame/01-TBE/01-TBE/: 01-TBE.vcxproj  01-TBE.vcxproj.filters
2DGame/02-Bubble/: Scene.cpp  Scene.h
2DGame/02-Bubble/02-Bubble/: 02-Bubble.vcxproj  02-Bubble.vcxproj.filters
2DGame/02-Bubble/levels/: level01.txt
2DGame/Namekcraft/: CMakeLists.txt  Craft.cpp  Craft.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Player.cpp  Player.cpp.orig  Player.h  Scene.cpp  Scene.cpp.orig  Scene.h  SceneMenu.cpp  SceneMenu.h  SceneOver.cpp  SceneOver.h  SimplexNoise.cpp  SimplexNoise.h  SoundManager.cpp  SoundManager.h  Sprite.cpp  Sprite.h  TexturedQuad.cpp  TileMap.cpp  World.cpp  World.h  main.cpp
2DGame/Namekcraft/images/: asdf
2DGame/Namekcraft/levels/: .~lock.level01.txt#  level01.txt  namek1.txt
2DGame/Namekcraft/shaders/: text.frag  text.vert  texture.frag  texture.vert
Namekcraft/: AnimKeyframes.h  Craft.cpp  Craft.h  Enemy.cpp  Enemy.cpp.orig  Enemy.h  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Namekcraft.sln  Player.cpp  Player.h  Quad.cpp  Quad.h  Scene.cpp  Scene.h  SceneMenu.cpp  SceneMenu.h  SceneOver.cpp  SceneOver.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SimplexNoise.cpp  SimplexNoise.h  SoundManager.cpp  SoundManager.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h  TexturedQuad.cpp  TexturedQuad.h  TileMap.cpp  (+4 more)
Namekcraft/Namekcraft/: Namekcraft.vcxproj
Namekcraft/shaders/: simple.frag  simple.vert
OpenGL/01-window/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
OpenGL/01-window/01-window/: 01-window.vcxproj  01-window.vcxproj.filters
OpenGL/02-primitives/: CMakeLists.txt  Quad.h  Scene.cpp  Scene.h
OpenGL/02-primitives/02-primitives/: 02-primitives.vcxproj  02-primitives.vcxproj.filters  Circle.cpp  Circle.h
OpenGL/03-uniforms/: CMakeLists.txt
OpenGL/03-uniforms/03-uniforms/: 03-uniforms.vcxproj  03-uniforms.vcxproj.filters
OpenGL/04-transforms/: CMakeLists.txt  Scene.cpp  Scene.h
OpenGL/04-transforms/04-transforms/: 04-transforms.vcxproj
OpenGL/05-textures/: CMakeLists.txt
OpenGL/05-textures/05-textures/: 05-textures.vcxproj  05-textures.vcxproj.filters
OpenGL/06-text/: CMakeLists.txt
OpenGL/06-text/06-text/: 06-text.vcxproj  06-text.vcxproj.filters
assets/Editables/: Fondosimetric.psd  Sky.psd  character.psd  items.psd  itemsmodificats.psd
exercisis/: exercisis.odt
